--- a/conf/dataset/nlp/multiple_choice/race.yaml
+++ b/conf/dataset/nlp/multiple_choice/race.yaml
@@ -1,6 +1,6 @@
 # @package dataset
 defaults:
-  - nlp/hf_default
+  - nlp/default
 _target_: lightning_transformers.task.nlp.multiple_choice.RaceMultipleChoiceDataModule
 cfg:
   dataset_name: race
