--- a/conf/dataset/nlp/question_answering/squad.yaml
+++ b/conf/dataset/nlp/question_answering/squad.yaml
@@ -1,6 +1,6 @@
 # @package dataset
 defaults:
-  - nlp/hf_default
+  - nlp/default
 _target_: lightning_transformers.task.nlp.question_answering.datasets.SquadDataModule
 cfg:
   dataset_name: squad
