--- a/conf/dataset/nlp/summarization/cnn_dailymail.yaml
+++ b/conf/dataset/nlp/summarization/cnn_dailymail.yaml
@@ -1,6 +1,6 @@
 # @package dataset
 defaults:
-  - nlp/hf_default
+  - nlp/default
 _target_: lightning_transformers.task.nlp.summarization.CNNDailyMailSummarizationDataModule
 cfg:
   dataset_name: cnn_dailymail
