--- a/conf/task/nlp/language_modeling.yaml
+++ b/conf/task/nlp/language_modeling.yaml
@@ -1,5 +1,6 @@
 # @package task
 defaults:
   - nlp/default
+  - override /dataset@_group_: nlp/language_modeling/default
 _target_: lightning_transformers.task.nlp.language_modeling.LanguageModelingTransformer
 downstream_model_type: transformers.AutoModelForCausalLM
