--- a/conf/task/nlp/summarization.yaml
+++ b/conf/task/nlp/summarization.yaml
@@ -2,6 +2,7 @@
 defaults:
   - nlp/default
   - override /backbone@_group_: nlp/seq2seq # Swap to a default seq2seq compatible backbone
+  - override /dataset@_group_: nlp/summarization/default
 _target_: lightning_transformers.task.nlp.summarization.SummarizationTransformer
 downstream_model_type: transformers.AutoModelForSeq2SeqLM
 cfg:
