Set a default task

--- a/conf/dataset/default.yaml
+++ b/conf/dataset/default.yaml
@@ -1,4 +1,5 @@
 # @package dataset
+_target_: lightning_transformers.core.data.TransformerDataModule
 cfg:
   # torch data-loader specific arguments
   batch_size: ${training.batch_size}
