--- a/conf/task/default.yaml
+++ b/conf/task/default.yaml
@@ -3,6 +3,6 @@
 # By default we turn off recursive instantiation, allowing the user to instantiate themselves at the appropriate times.
 _recursive_: false
 
-backbone: ${backbone}
+_target_: lightning_transformers.core.model.TaskTransformer
 optimizer: ${optimizer}
 scheduler: ${scheduler}
