--- a/conf/task/nlp/default.yaml
+++ b/conf/task/nlp/default.yaml
@@ -3,3 +3,4 @@ defaults:
   - /task/default
   - /backbone@_group_: nlp/default # use AutoModel backbone by default
   - /dataset@_group_: nlp/default
+backbone: ${backbone}
