Set the default dataset always inside the task configs

--- a/conf/task/nlp/default.yaml
+++ b/conf/task/nlp/default.yaml
@@ -2,5 +2,5 @@
 defaults:
   - /task/default
   - /backbone@_group_: nlp/default # use AutoModel backbone by default
-  - /dataset@_group_: nlp/default
+  - override /dataset@_group_: nlp/default
 backbone: ${backbone}
