--- a/conf/task/default.yaml
+++ b/conf/task/default.yaml
@@ -1,4 +1,6 @@
 # @package task
+defaults:
+  - /dataset@_group_: dataset/default
 
 # By default we turn off recursive instantiation, allowing the user to instantiate themselves at the appropriate times.
 _recursive_: false
