--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,11 +1,10 @@
 defaults: # loads default configs
+  - task: default
   - optimizer: adamw
   - scheduler: linear_schedule_with_warmup
   - training: default
   - trainer: default
 
-task: ???
-dataset: ???
 experiment_name: ${now:%Y-%m-%d}_${now:%H-%M-%S}
 log: False
 ignore_warnings: True # todo: check warnings before release
