Specify requirements in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 pytorch-lightning>=1.2.4
 torch>=1.6
+numpy
 
 #metrics
 torchmetrics>=0.2.0
@@ -13,6 +14,7 @@ datasets
 
 # hydra
 hydra-core>=1.1.0.dev4 # todo: swap to 1.1 version once out
+omegaconf
 
 # task-specific
 rouge-score
