--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -16,4 +16,4 @@ formats: all
 python:
   version: 3.8
   install:
-    - requirements: docs/requirements.txt
+    - requirements: requirements/docs.txt
