--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -2,7 +2,7 @@ name: "Deploy Docs"
 
 on:
   push:
-    branches: [master]
+    branches: [za-lizatko-nebo-cokoladu]
 
 jobs:
   # https://github.com/marketplace/actions/deploy-to-github-pages
