Set the effective block size to None in the default config, fix log message

--- a/conf/dataset/nlp/language_modeling/default.yaml
+++ b/conf/dataset/nlp/language_modeling/default.yaml
@@ -2,3 +2,5 @@
 defaults:
   - nlp/default
 _target_: lightning_transformers.task.nlp.language_modeling.LanguageModelingDataModule
+cfg:
+  block_size: null
