--- a/conf/trainer/default.yaml
+++ b/conf/trainer/default.yaml
@@ -27,7 +27,7 @@ limit_test_batches: 1.0
 val_check_interval: 1.0
 flush_logs_every_n_steps: 100
 log_every_n_steps: 50
-accelerator: null
+accelerator: ddp
 sync_batchnorm: False
 precision: 32
 weights_summary: 'top'
