Changes to enable loggers (tb, wandb)

--- a/conf/trainer/default.yaml
+++ b/conf/trainer/default.yaml
@@ -1,5 +1,5 @@
 _target_: pytorch_lightning.Trainer
-logger: True
+logger: tensorboard
 checkpoint_callback: True
 callbacks: null
 default_root_dir: null
