--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pytorch-lightning>=1.2.4
+pytorch-lightning>=1.4.0
 torch>=1.6
 numpy
 tqdm
 
 #metrics
-torchmetrics>=0.2.0
+torchmetrics
 
 # extras
 fairscale
@@ -14,7 +14,7 @@ transformers
 datasets
 
 # hydra
-hydra-core>=1.1.0.dev4 # todo: swap to 1.1 version once out
+hydra-core>=1.1.0
 
 # task-specific
 rouge-score
