--- a/conf/trainer/plugins/sparseml.yaml
+++ b/conf/trainer/plugins/sparseml.yaml
@@ -1,3 +1,3 @@
 _target_: lightning_transformers.core.callback.LightningBoltsSparseMLCallback
 output_dir: MODELS
-recipe_path: recipe.yaml
+recipe_path: content/recipe.yaml
