added sparseml to plugins

--- a/conf/trainer/deepspeed.yaml
+++ b/conf/trainer/deepspeed.yaml
@@ -1,5 +1,6 @@
 defaults:
   - default # inherit from default trainer conf
   - plugins: deepspeed
+  - callbacks: sparseml
 accelerator: ddp
 precision: 16
