--- a/conf/trainer/callbacks/sparseml.yaml
+++ b/conf/trainer/callbacks/sparseml.yaml
@@ -1,3 +1,3 @@
 _target_: lightning_transformers.core.callback.LightningBoltsSparseMLCallback
-output_dir: /content/MODELS
-recipe_path: /content/recipe.yaml
+output_dir: ${env:MODELS_PATH}
+recipe_path: ${env:RECIPE_PATH}
