--- a/conf/trainer/sharded.yaml
+++ b/conf/trainer/sharded.yaml
@@ -1,5 +1,6 @@
 defaults:
   - default # inherit from default trainer conf
   - plugins: sharded
+  - callbacks: sparseml
 accelerator: ddp
 precision: 16
