--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,24 @@
+[build-system]
+requires = [
+    "setuptools",
+    "wheel",
+]
+
 [tool.black]
+# https://github.com/psf/black
 line-length = 120
+exclude = "(.eggs|.git|.hg|.mypy_cache|.venv|_build|buck-out|build|dist)"
 
 [tool.isort]
+known_first_party = [
+    "lightning_transformers",
+    "tests",
+    "conf",
+    "examples",
+]
+skip_glob = []
 profile = "black"
 line_length = 120
-force_sort_within_sections = "False"
-order_by_type = "False"
+
+[tool.autopep8]
+ignore = ["E731"]
