--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -39,7 +39,12 @@ jobs:
         python -c "fpath = 'requirements.txt' ; req = open(fpath).read().replace('>=', '==') ; open(fpath, 'w').write(req)"
         python -c "fpath = 'requirements/test.txt' ; req = open(fpath).read().replace('>=', '==') ; open(fpath, 'w').write(req)"
 
-    # Note: This uses an internal pip API and may not always work
+    - name: Install latest PyTorch for Windows
+      if: matrix.requires == 'minimal' and runner.os == 'windows'
+      run: |
+        pip install torch -U
+
+      # Note: This uses an internal pip API and may not always work
     # https://github.com/actions/cache/blob/master/examples.md#multiple-oss-in-a-workflow
     - name: Get pip cache
       id: pip-cache
