--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pytorch-lightning>=1.4.0
-torch>=1.7.1
+# torch>=1.7.1
 numpy
 tqdm
 
@@ -19,7 +19,6 @@ hydra-core>=1.1.0
 # task-specific
 sentencepiece
 torchmetrics[text]
-sparseml[torch]
 
 # extensions
 lightning-bolts>=0.4.0
