--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -62,7 +62,7 @@ jobs:
       run: |
         pip install --requirement requirements.txt --upgrade --quiet --find-links https://download.pytorch.org/whl/cpu/torch_stable.html
         pip install --requirement requirements/test.txt --quiet
-        pip install --requirement requirements/extras.txt --quiet
+        pip install --requirement requirements/extra.txt --quiet
         pip install .
         python --version
         pip --version
