--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
 pytorch-lightning>=1.4.0
-torch>=1.7.1
+torch>=1.7.1,!=1.9.0 # todo: figure out why 1.9.0 crashes transformers inference
 numpy
 tqdm
 
 #metrics
 torchmetrics>=0.5.1
-
-# extras
-fairscale
 
 # huggingface
 transformers
@@ -19,6 +16,3 @@ hydra-core>=1.1.0
 # task-specific
 sentencepiece
 torchmetrics[text]
-
-# extensions
-lightning-bolts>=0.4.0
