--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -13,13 +13,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, macOS-10.15, windows-2019]
-        python-version: [3.6, 3.8]
-        requires: ['minimal', 'latest']
-        exclude:
-          # excludes windows minimal test as HF hanging
-          - os: windows-2019
-            requires: 'minimal'
+        os: [ubuntu-20.04, macOS-10.15]
+        python-version: [3.8]
+        requires: ['latest']
 
     # Timeout: https://stackoverflow.com/a/59076067/4521646
     timeout-minutes: 35
