--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         os: [ubuntu-20.04, macOS-10.15]
         python-version: [3.8]
-        requires: ['latest']
+        requires: ['minimal', 'latest']
 
     # Timeout: https://stackoverflow.com/a/59076067/4521646
     timeout-minutes: 35
