--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pytorch-lightning>=1.6.0
-torch>=1.9.1
+torch>=1.7.1,!=1.9.0,!=1.9.1 # todo: figure out why 1.9.0 crashes transformers inference
 numpy
 tqdm
 
