--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pytorch-lightning>=1.4.0
-torch>=1.7.1,!=1.9.0 # todo: figure out why 1.9.0 crashes transformers inference
+pytorch-lightning>=1.6.0
+torch>=1.10.0
 numpy
 tqdm
 
