--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, macOS-10.15]
+        os: [ubuntu-22.04, macOS-12]
         python-version: [3.8]
         requires: ['minimal', 'latest']
 
@@ -37,6 +37,7 @@ jobs:
       if: matrix.requires == 'minimal'
       run: |
         python -c "fpath = 'requirements.txt' ; req = open(fpath).read().replace('>=', '==') ; open(fpath, 'w').write(req)"
+        python -c "fpath = 'requirements/extra.txt' ; req = open(fpath).read().replace('>=', '==') ; open(fpath, 'w').write(req)"
         python -c "fpath = 'requirements/test.txt' ; req = open(fpath).read().replace('>=', '==') ; open(fpath, 'w').write(req)"
 
     # Note: This uses an internal pip API and may not always work
@@ -56,7 +57,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install -e . --upgrade --quiet -r requirements/test.txt -r requirements/extra.txt --find-links https://download.pytorch.org/whl/cpu/torch_stable.html
+        pip install -e . --upgrade --quiet -r requirements/devel.txt --find-links https://download.pytorch.org/whl/cpu/torch_stable.html
         python --version
         pip --version
         pip list
