--- a/.github/workflows/code-format.yml
+++ b/.github/workflows/code-format.yml
@@ -33,9 +33,9 @@ jobs:
           python-version: 3.8
       - name: Install mypy
         run: |
-          pip install mypy
+          pip install mypy==0.920
           pip list
       - name: mypy
         run: |
           # TODO: disallow failure when fixed
-          mypy lightning_transformers || true
+          mypy lightning_transformers
