--- a/.github/workflows/code-format.yml
+++ b/.github/workflows/code-format.yml
@@ -33,7 +33,7 @@ jobs:
           python-version: 3.8
       - name: Install mypy
         run: |
-          pip install mypy==0.920
+          pip install mypy==0.920 -r requirements.txt --find-links https://download.pytorch.org/whl/cpu/torch_stable.html
           pip list
       - name: mypy
         run: |
