--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,10 +45,31 @@ warn_no_return = "False"
 # the list can be generated with:
 # mypy --no-error-summary 2>&1 | tr ':' ' ' | awk '{print $1}' | sort | uniq | sed 's/\.py//g; s|src/||g;  s|\/|\.|g' | xargs -I {} echo '"{}",'
 module = [
-    "lightning_transformers.callbacks.*",
-    "lightning_transformers.core.*",
-    "lightning_transformers.plugins.*",
-    "lightning_transformers.task.*",
-    "lightning_transformers.utilities.*",
+    "lightning_transformers.task.nlp.language_modeling.data",
+    "lightning_transformers.task.nlp.language_modeling.model",
+    "lightning_transformers.task.nlp.masked_language_modeling.data",
+    "lightning_transformers.task.nlp.masked_language_modeling.model",
+    "lightning_transformers.task.nlp.multiple_choice.data",
+    "lightning_transformers.task.nlp.multiple_choice.datasets.race.data",
+    "lightning_transformers.task.nlp.multiple_choice.datasets.swag.data",
+    "lightning_transformers.task.nlp.multiple_choice.model",
+    "lightning_transformers.task.nlp.multiple_choice.utils",
+    "lightning_transformers.task.nlp.question_answering.data",
+    "lightning_transformers.task.nlp.question_answering.datasets.squad.data",
+    "lightning_transformers.task.nlp.question_answering.datasets.squad.metric",
+    "lightning_transformers.task.nlp.question_answering.datasets.squad.processing",
+    "lightning_transformers.task.nlp.question_answering.model",
+    "lightning_transformers.task.nlp.summarization.datasets.cnn_dailymail",
+    "lightning_transformers.task.nlp.summarization.datasets.xsum",
+    "lightning_transformers.task.nlp.summarization.model",
+    "lightning_transformers.task.nlp.text_classification.data",
+    "lightning_transformers.task.nlp.text_classification.model",
+    "lightning_transformers.task.nlp.token_classification.data",
+    "lightning_transformers.task.nlp.token_classification.model",
+    "lightning_transformers.task.nlp.translation.data",
+    "lightning_transformers.task.nlp.translation.datasets.wmt16",
+    "lightning_transformers.task.nlp.translation.model",
+    "lightning_transformers.task.vision.image_classification.data",
+    "lightning_transformers.task.vision.image_classification.model",
 ]
 ignore_errors = "True"
