--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,15 +44,41 @@ warn_no_return = "False"
 # the list can be generated with:
 # mypy --no-error-summary 2>&1 | tr ':' ' ' | awk '{print $1}' | sort | uniq | sed 's/\.py//g; s|src/||g;  s|\/|\.|g' | xargs -I {} echo '"{}",'
 module = [
-    "muse.utility.data_io",
-    "muse.utility.exception_handling",
-    "muse.utility.rate_limiter",
-    "muse.components.locust",
-    "muse.components.stable_diffusion_serve",
-    "muse.components.safety_checker_embedding",
-    "muse.components.muse_slack_bot",
-    "muse.components.load_balancer",
-    "muse.models.pipeline",
+    "lightning_transformers.task.nlp.summarization.datasets.cnn_dailymail",
+    "lightning_transformers.core.utils",
+    "lightning_transformers.task.nlp.multiple_choice.utils",
+    "lightning_transformers.core.iterable",
+    "lightning_transformers.core.seq2seq.utils",
+    "lightning_transformers.task.nlp.question_answering.datasets.squad.metric",
+    "lightning_transformers.task.nlp.question_answering.datasets.squad.data",
+    "lightning_transformers.task.nlp.multiple_choice.datasets.swag.data",
+    "lightning_transformers.utilities.deepspeed",
+    "lightning_transformers.task.nlp.question_answering.datasets.squad.processing",
+    "lightning_transformers.core.loggers",
+    "lightning_transformers.core.finetuning",
+    "lightning_transformers.core.data",
+    "lightning_transformers.core.model",
+    "lightning_transformers.callbacks.sparseml",
+    "lightning_transformers.task.vision.image_classification.model",
+    "lightning_transformers.task.vision.image_classification.data",
+    "lightning_transformers.task.nlp.token_classification.model",
+    "lightning_transformers.task.nlp.token_classification.data",
+    "lightning_transformers.task.nlp.text_classification.model",
+    "lightning_transformers.task.nlp.text_classification.data",
+    "lightning_transformers.task.nlp.question_answering.model",
+    "lightning_transformers.task.nlp.question_answering.data",
+    "lightning_transformers.task.nlp.multiple_choice.model",
+    "lightning_transformers.task.nlp.multiple_choice.data",
+    "lightning_transformers.task.nlp.masked_language_modeling.model",
+    "lightning_transformers.task.nlp.masked_language_modeling.data",
+    "lightning_transformers.task.nlp.language_modeling.model",
+    "lightning_transformers.task.nlp.language_modeling.data",
+    "lightning_transformers.plugins.checkpoint",
+    "lightning_transformers.core.seq2seq.finetuning",
+    "lightning_transformers.core.seq2seq.data",
+    "lightning_transformers.task.nlp.translation.model",
+    "lightning_transformers.task.nlp.translation.data",
+    "lightning_transformers.task.nlp.summarization.model",
 ]
 ignore_errors = "True"
 
