--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,33 +46,19 @@ module = [
     "lightning_transformers.core.*",
     "lightning_transformers.core.seq2seq.*",
     "lightning_transformers.plugins.*",
-    'lightning_transformers.task.vision.image_classification.data',
-    'lightning_transformers.task.vision.image_classification.model',
-    'lightning_transformers.task.nlp.masked_language_modeling.data',
-    'lightning_transformers.task.nlp.masked_language_modeling.model',
-    'lightning_transformers.task.nlp.text_classification.data',
-    'lightning_transformers.task.nlp.text_classification.model',
-    'lightning_transformers.task.nlp.token_classification.data',
-    'lightning_transformers.task.nlp.token_classification.model',
-    'lightning_transformers.task.nlp.question_answering.data',
-    'lightning_transformers.task.nlp.question_answering.model',
-    'lightning_transformers.task.nlp.question_answering.datasets.squad.metric',
-    'lightning_transformers.task.nlp.question_answering.datasets.squad.data',
-    'lightning_transformers.task.nlp.question_answering.datasets.squad.processing',
-    'lightning_transformers.task.nlp.multiple_choice.utils',
-    'lightning_transformers.task.nlp.multiple_choice.data',
-    'lightning_transformers.task.nlp.multiple_choice.model',
-    'lightning_transformers.task.nlp.multiple_choice.datasets.race.data',
-    'lightning_transformers.task.nlp.multiple_choice.datasets.swag.data',
-    'lightning_transformers.task.nlp.language_modeling.data',
-    'lightning_transformers.task.nlp.language_modeling.model',
-    'lightning_transformers.task.nlp.translation.data',
-    'lightning_transformers.task.nlp.translation.model',
-    'lightning_transformers.task.nlp.translation.datasets.wmt16',
-    'lightning_transformers.task.nlp.summarization.data',
-    'lightning_transformers.task.nlp.summarization.model',
-    'lightning_transformers.task.nlp.summarization.datasets.cnn_dailymail',
-    'lightning_transformers.task.nlp.summarization.datasets.xsum',
+    'lightning_transformers.task.vision.image_classification.*',
+    'lightning_transformers.task.nlp.masked_language_modeling.*',
+    'lightning_transformers.task.nlp.text_classification.*',
+    'lightning_transformers.task.nlp.token_classification.*',
+    'lightning_transformers.task.nlp.question_answering.*',
+    'lightning_transformers.task.nlp.question_answering.datasets.squad.*',
+    'lightning_transformers.task.nlp.multiple_choice.*',
+    'lightning_transformers.task.nlp.multiple_choice.datasets.race.*',
+    'lightning_transformers.task.nlp.language_modeling.*',
+    'lightning_transformers.task.nlp.translation.*',
+    'lightning_transformers.task.nlp.translation.datasets.*',
+    'lightning_transformers.task.nlp.summarization.*',
+    'lightning_transformers.task.nlp.summarization.datasets.*',
     "lightning_transformers.task.vision.image_classification.*",
     "lightning_transformers.utilities.*",
 ]
