--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,19 +47,7 @@ module = [
     "lightning_transformers.core.seq2seq.*",
     "lightning_transformers.plugins.*",
     'lightning_transformers.task.vision.image_classification.*',
-    'lightning_transformers.task.nlp.masked_language_modeling.*',
-    'lightning_transformers.task.nlp.text_classification.*',
-    'lightning_transformers.task.nlp.token_classification.*',
-    'lightning_transformers.task.nlp.question_answering.*',
-    'lightning_transformers.task.nlp.question_answering.datasets.squad.*',
-    'lightning_transformers.task.nlp.multiple_choice.*',
-    'lightning_transformers.task.nlp.multiple_choice.datasets.race.*',
-    'lightning_transformers.task.nlp.language_modeling.*',
-    'lightning_transformers.task.nlp.translation.*',
-    'lightning_transformers.task.nlp.translation.datasets.*',
-    'lightning_transformers.task.nlp.summarization.*',
-    'lightning_transformers.task.nlp.summarization.datasets.*',
-    "lightning_transformers.task.vision.image_classification.*",
+    'lightning_transformers.task.nlp.**.*',
     "lightning_transformers.utilities.*",
 ]
 ignore_errors = "True"
