--- a/.github/workflows/pypi-release.yml
+++ b/.github/workflows/pypi-release.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [master]
   release:
-    types: [created]
+    types: [published]
 
 # based on https://github.com/pypa/gh-action-pypi-publish
 
