--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Set min. dependencies
       if: matrix.requires == 'oldest'
       run: |
-        for fpath in ('requirements.txt', 'requirements/extra.txt', 'requirements/test.txt'):
+        for fpath in ('requirements.txt', 'requirements/extra.txt'):
             req = open(fpath).read().replace('>=', '==')
             open(fpath, 'w').write(req)
       shell: python
